# MemorySpace-Server

./: .env  .flake8  README.md  pyproject.toml  stam.py
app/: rest_decorators.py  urls.py  views.py
server/: settings.py  urls.py
